--- a/.github/workflows/hola-mundo.yml
+++ b/.github/workflows/hola-mundo.yml
@@ -3,7 +3,7 @@ run-name: Learning github actions!
 on: [push]
 jobs:
   hello-world:
-    runs-on: node-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
